don't show unlinked tabs