@@ -6,8 +6,16 @@ import me.shedaniel.rei.api.common.transfer.info.stack.SlotAccessor;
 import me.shedaniel.rei.api.common.transfer.info.stack.VanillaSlotAccessor;
 import me.shedaniel.rei.plugin.common.displays.crafting.DefaultCraftingDisplay;
 import net.minecraft.client.player.LocalPlayer;
+import net.minecraft.core.Direction;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import org.spongepowered.asm.mixin.injection.struct.InjectorGroupInfo;
 import tfar.craftingstation.menu.CraftingStationMenu;
+import tfar.craftingstation.platform.Services;
+import tfar.craftingstation.util.SideContainerWrapper;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -36,25 +44,26 @@ public class CraftingStationTransferHandler implements SimpleTransferHandler {
 
     @Override
     public Iterable<SlotAccessor> getInputSlots(Context context) {
-        return IntStream.range(1, 10)
-                .mapToObj(id -> SlotAccessor.fromSlot(context.getMenu().getSlot(id)))
-                .toList();
+        return IntStream.range(1, 10).mapToObj(id -> SlotAccessor.fromSlot(context.getMenu().getSlot(id))).collect(Collectors.toList());
     }
 
     @Override
     public Iterable<SlotAccessor> getInventorySlots(Context context) {
         LocalPlayer player = context.getMinecraft().player;
 
-        int sideContainerOffset = 10 + ((CraftingStationMenu) context.getMenu()).subContainerSize;
+        List<SlotAccessor> list = new ArrayList<>();
+        CraftingStationMenu craftingStationMenu = (CraftingStationMenu) context.getMenu();
 
-        return IntStream.range(10, context.getMenu().slots.size())
-                .mapToObj(index -> {
-                    if (index < sideContainerOffset) {
-                        return new VanillaSlotAccessor(context.getMenu().getSlot(index));
-                    } else {
-                        return SlotAccessor.fromPlayerInventory(player, index - sideContainerOffset);
-                    }
-                })
-                .collect(Collectors.toList());
+        for (Map.Entry<Direction,BlockEntity> entry : craftingStationMenu.blockEntityMap.entrySet()) {
+            SideContainerWrapper sideContainerWrapper = Services.PLATFORM.getWrapper(entry.getValue());
+            for (int i = 0; i < sideContainerWrapper.$getSlotCount();i++) {
+                list.add(new SideContainerSlotAccessor(sideContainerWrapper, i));
+            }
+        }
+
+        for (int id = 10+CraftingStationMenu.MAX_SLOTS;id < 10 + CraftingStationMenu.MAX_SLOTS + 36;id++) {
+            list.add(SlotAccessor.fromPlayerInventory(player, id - CraftingStationMenu.MAX_SLOTS - 10));
+        }
+        return list;
     }
 }
